src/view/MainLayout.css
@import url('https://fonts.googleapis.com/css?family=Varela+Round');
@font-face {
    font-family: "Harlow Solid Italic";
    src: url("../font/HarlowSolidItalic.TTF")
}

@font-face {
    font-family: "Calibri Light";
    src: url("../font/CalibriLight.ttf")
}

@font-face {
    font-family: "Varela Round', sans-serif";
    src: url('https://fonts.googleapis.com/css?family=Varela+Round')
   /* src: url("../font/Helvetica.ttf")*/
}

.body-main-layout{
    position:absolute;
    top:0;
    right:0;
    bottom:0;
    left:0;
    background: url("../image/background.jpg");
    background-size: cover;
}


.nav-bar{
    margin-top: 0;
    width: 100%;
    height: 48px;
    float: top;
    background-color: white;
    box-shadow: 0 0 40px 3px black;
}

.below-nav-bar{
    float: top;
    height: calc(100% - 45px);
    width: 100%;
    overflow-y: auto;
}


.middle-panel{
    margin-top: 1.5%;
    min-width:500px;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 0 40px 3px black;
    background-color: white;
}

.above-middle-panel{
    margin-top: 1.5%;
    min-width:500px;
    width: 65%;
    margin-left: auto;
    margin-right: auto;

}

.logo-main{
    float: left;
    font-family: "Harlow Solid Italic",serif;
    font-size: 165%;
    margin-left: 20%;
    margin-top: 3px;
    margin-right: 1%;
}

.button-nav-bar{
    float: left;
    margin-top: 15px;
    margin-left: .5%;
    font-size: small;
    cursor: pointer;
    color: #2f5597;
    background: transparent;
    border: transparent;
}

/*add similar bouncing effect and underline */
@keyframes bounce {
    0%, 20%, 60%, 100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }

    40% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    80% {
        -webkit-transform: translateY(-1px);
        transform: translateY(-1px);
    }
}

.button-nav-bar:hover{
    animation: bounce 3s;
    font-size: medium;
}

.logout-button{
    float: right;
    margin-top: 15px;
    margin-left: 1%;
    margin-right: 22%;
    font-size: small;
    cursor: pointer;
    color: #2f5597;
    background: transparent;
    border: transparent;
}
.logout-button:hover{
    font-size: large;
    color: #3174ad;
}

